--- a/web/src/main/resources/templates/information/informations.html
+++ b/web/src/main/resources/templates/information/informations.html
@@ -6,10 +6,12 @@
   <meta name="description" content=""/>
   <title>行业要闻</title>
   <link type="text/css" rel="stylesheet" th:href="@{/css/global.css}"/>
+  <script type="text/javascript" th:src="@{/js/jquery-min.js}"></script>
+  <script  th:src="@{/js/script.js}"></script>
 </head>
 <body>
 	<div>
-		<div th:include="@{/base/head}"></div>
+		<div th:include="@{/head/head}"></div>
 	</div>
 	<!-- header -->
 	<div class="wrapper">
