--- a/web/src/main/resources/templates/subject/subject.html
+++ b/web/src/main/resources/templates/subject/subject.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<div>
-		<div th:include="@{/base/head}"></div>
+		<div th:include="@{/head/head}"></div>
 	</div>
 	<!-- header -->
 	<div class="wrapper" th:object="${subject}">
