--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -17,6 +17,10 @@
 			$(document).ajaxSend(function(e, xhr, options) {
 				xhr.setRequestHeader(header, token);
 			});
+			$('#text').click(function(){
+				alert(token);
+				alert(header);
+			});
 		});
 	</script>
 </head>
