--- a/web/src/main/resources/templates/user/changePassword.html
+++ b/web/src/main/resources/templates/user/changePassword.html
@@ -5,18 +5,20 @@
 		<title>Insert title here</title>
 	</head>
 	<body>
-		<form method="post" th:object="${form}">
-			oldPassword:
+		<form th:method="put" th:object="${form}">
+		phone:<input type="text" th:field="*{phone}"/><br/>
+		newPassword:<input type="password" th:field="*{password}"/>
+			<!--oldPassword:
 			<input type="password" th:field="*{oldPassword}"  placeholder="Username"/>
 			<p th:if="${#fields.hasErrors('oldPassword')}" th:errors="*{oldPassword}">Incorrect date</p>
 			newPassword:
 			<input type="password" th:field="*{newPassword}" placeholder="Password"/>
 			confirm:
-			<input type="password" th:field="*{confirmPassword}" placeholder="Password"/>
-			<p th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}">Incorrect date</p>
+			 <input type="password" th:field="*{confirmPassword}" placeholder="Password"/> 
+			<p th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}">Incorrect date</p>-->
 			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
-			<input type="submit"/>
+			<input type="submit" value="submit"/>
 
 		</form>
 	</body>
