--- a/web/src/main/resources/templates/mtest.html
+++ b/web/src/main/resources/templates/mtest.html
@@ -18,6 +18,7 @@
 	<embed
 		th:src="@{'http://static.youku.com/v/swf/qplayer.swf?VideoIDS='+*{uId}+' &amp;isAutoPlay=false&amp;isShowRelatedVideo=false&amp;embedid=-&amp;showAd=0'}"
 		quality="high" width="600" height="400" align="middle" allowScriptAccess="sameDomain" allowFullscreen="true" type="application/x-shockwave-flash"></embed>
+	<img alt="" th:src="@{'http://static.youku.com/v/swf/qplayer.swf?VideoIDS='+*{uId}+' &amp;isAutoPlay=false&amp;isShowRelatedVideo=false&amp;embedid=-&amp;showAd=0'}"/>
 	</div>
-		</body>
+</body>
 </html>
