--- a/web/src/main/resources/templates/product/products.html
+++ b/web/src/main/resources/templates/product/products.html
@@ -105,7 +105,18 @@
 			<a class="blue ft14">生物芯片</a>			
 			<span>筛选商品 共<i>1222</i>件商品</span>
 		</div>
-		<div class="sort-group">			
+		<div class="sort-group">	
+			<div class="selected">
+					<label>筛选：</label>
+					<a class="sel-tag">
+						类型：生物芯片
+						<span class="icon-del"></span>
+					</a>
+					<a class="sel-tag">
+						品牌：生物芯片
+						<span class="icon-del"></span>
+					</a>
+			</div>		
 			<ul>
 				<li>
 					<label><b>类型：</b></label>
