--- a/web/src/main/resources/templates/user/common/detail.html
+++ b/web/src/main/resources/templates/user/common/detail.html
@@ -1,116 +1,122 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta name="description" content=""/>
-  <title>个人资料-个人</title>
-  <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
-    <meta name="_csrf" th:content="${_csrf.token}" />
-	<meta name="_csrf_header" th:content="${_csrf.headerName}" />
-  <script th:src="@{/js/jquery-min.js}"></script>
-  <script th:src="@{/js/script.js}"></script>
-</head>
-<body>
-	<div class="header">
-		<div th:include="/head/head"></div>
-	</div>
-	<!-- header -->
-	<div class="wrapper">
-		<div class="self-wrap">
-			<div class="gray-hd"><a class="blue">个人中心</a></div>
-			<div class="mainwrapper clearfix">
-				<div class="aside fl">
-					<a class="active">个人资料</a>
-					<a href="/user/collection">收藏夹</a>
-					<a href="/user/cart">购物车</a>
-					<a href="/user/buyRecords">采购申请</a>
+	<head lang="en">
+		<meta charset="UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta name="description" content=""/>
+		<title>个人资料-个人</title>
+		<link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
+		<meta name="_csrf" th:content="${_csrf.token}" />
+		<meta name="_csrf_header" th:content="${_csrf.headerName}" />
+		<script th:src="@{/js/jquery-min.js}"></script>
+		<script th:src="@{/js/script.js}"></script>
+	</head>
+	<body>
+		<div class="header">
+			<div th:include="/head/head"></div>
+		</div>
+		<!-- header -->
+		<div class="wrapper">
+			<div class="self-wrap">
+				<div class="gray-hd">
+					<a class="blue">个人中心</a>
 				</div>
-				<div class="mainpanel fr">
-					<div class="tabs-nav info-tabs bodr">
-						<a class="active">基本资料</a>
-						<a>修改密码</a>
+				<div class="mainwrapper clearfix">
+					<div class="aside fl">
+						<a class="active">个人资料</a>
+						<a href="/user/collection">收藏夹</a>
+						<a href="/user/cart">购物车</a>
+						<a href="/user/buyRecords">采购申请</a>
 					</div>
-					<div class="tab-conts tab-con">
-						<div class="tab-panel form-control">
-							<form th:object="${user}" th:method="put">
-							<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-								<div class="form-group">
-									<label>邮箱</label>
-									<input type="text" th:field="*{email}" readonly="readonly"/>
-									<label>用户名</label>
-									<input type="text" th:field="*{name}" readonly="readonly"/>
-								</div>
-								<div class="form-group">
-									<label>真实姓名</label>
-									<input type="text" th:field="*{realName}" readonly="readonly"/>
-									<label>手机号</label>
-									<input type="text" th:field="*{phone}" readonly="readonly" />
-								</div>
-								<div class="form-group">
-									<label><i>*</i>单位</label>
-									<input type="text" th:field="*{company}"/>
-									<label><i>*</i >行业</label>
-									<select class="w228" th:field="*{industryInformation}">
-										<option value="ONE">科研院校/所</option>
-										<option value="TWO">工业检测机构</option>
-										<option value="THREE">委托合同研究机构</option>
-										<option value="FOUR">政府机构</option>
-										<option value="FIVE">商业检测/研发实验室</option>
-										<option value="SIX">医疗保健机构</option>
-										<option value="SEVEN">医院及大学医疗中心</option>
-										<option value="EIGTH">医疗及诊断设备公司</option>
-										<option value="NINE">制药/生物技术</option>
-										<option value="TEN">设备材料供应商</option>
-										<option value="ELEVEN">其他</option>
-									</select>
-								</div>
-								<div class="form-group">
-									<label><i>*</i>部门</label>
-									<input type="text" th:field="*{department}"/>
-									<label><i>*</i>电话</label>
-									<input type="text" th:field="*{companyPhone}"/>
-								</div>
-								<div class="form-group">
-									<label><i>*</i>传真</label>
-									<input type="text" th:field="*{fax}"/>
-									<label><i>*</i>邮政编码</label>
-									<input type="text" th:field="*{code}"/>
-								</div>
-								<div class="form-group">
-									<label><i>*</i>省/市</label>
-									<select class="w115">
-										<option>上海市</option>
-										<option>北京市</option>
-									</select>
-									<select class="w115">
-										<option>上海市</option>
-										<option>上海市</option>
-									</select>
-									<label><i>*</i>详细地址</label>
-									<input type="text" th:field="*{address}"/>
-								</div>
-								<button class="btn green">保存</button>							
-							</form>
+					<div class="mainpanel fr">
+						<div class="tabs-nav info-tabs bodr">
+							<a class="active">基本资料</a>
+							<a>修改密码</a>
 						</div>
-						<div class="tab-panel form-control hide w500">
-							<div class="form-group">
-								<label><i>*</i>旧密码</label>
-								<input type="text" />				
+						<div class="tab-conts tab-con">
+							<div class="tab-panel form-control">
+								<form th:object="${user}" th:method="put">
+									<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+									<div class="form-group">
+										<label>邮箱</label>
+										<input type="text" th:field="*{email}" readonly="readonly"/>
+										<label>用户名</label>
+										<input type="text" th:field="*{name}" readonly="readonly"/>
+									</div>
+									<div class="form-group">
+										<label>真实姓名</label>
+										<input type="text" th:field="*{realName}" readonly="readonly"/>
+										<label>手机号</label>
+										<input type="text" th:field="*{phone}" readonly="readonly" />
+									</div>
+									<div class="form-group">
+										<label><i>*</i>单位</label>
+										<input type="text" th:field="*{company}"/>
+										<label><i>*</i >行业</label>
+										<select class="w228" th:field="*{industryInformation}">
+											<option value="ONE">科研院校/所</option>
+											<option value="TWO">工业检测机构</option>
+											<option value="THREE">委托合同研究机构</option>
+											<option value="FOUR">政府机构</option>
+											<option value="FIVE">商业检测/研发实验室</option>
+											<option value="SIX">医疗保健机构</option>
+											<option value="SEVEN">医院及大学医疗中心</option>
+											<option value="EIGTH">医疗及诊断设备公司</option>
+											<option value="NINE">制药/生物技术</option>
+											<option value="TEN">设备材料供应商</option>
+											<option value="ELEVEN">其他</option>
+										</select>
+									</div>
+									<div class="form-group">
+										<label><i>*</i>部门</label>
+										<input type="text" th:field="*{department}"/>
+										<label><i>*</i>电话</label>
+										<input type="text" th:field="*{companyPhone}"/>
+									</div>
+									<div class="form-group">
+										<label><i>*</i>传真</label>
+										<input type="text" th:field="*{fax}"/>
+										<label><i>*</i>邮政编码</label>
+										<input type="text" th:field="*{code}"/>
+									</div>
+									<div class="form-group">
+										<label><i>*</i>省/市</label>
+										<select class="w115">
+											<option>上海市</option>
+											<option>北京市</option>
+										</select>
+										<select class="w115">
+											<option>上海市</option>
+											<option>上海市</option>
+										</select>
+										<label><i>*</i>详细地址</label>
+										<input type="text" th:field="*{address}"/>
+									</div>
+									<button class="btn green">
+										保存
+									</button>
+								</form>
 							</div>
-							<div class="form-group">
-								<label><i>*</i>新密码</label>
-								<input type="text" />
+							<div class="tab-panel form-control hide w500">
+								<div class="form-group">
+									<label><i>*</i>旧密码</label>
+									<input type="text" />
+								</div>
+								<div class="form-group">
+									<label><i>*</i>新密码</label>
+									<input type="text" />
+								</div>
+								<button class="btn green">
+									保存
+								</button>
 							</div>
-							<button class="btn green">保存</button>			
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="footer">
-		© 1998 - 2015 SJ Inc. All Rights Reserved
-	</div>
-</body>
-</html>	
+		<div class="footer">
+			© 1998 - 2015 SJ Inc. All Rights Reserved
+		</div>
+	</body>
+</html>
