--- a/admin/src/main/resources/templates/login.html
+++ b/admin/src/main/resources/templates/login.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Insert title here</title>
-</head>
-<body>
-<form  th:method="post" th:object="${user}">
-    <input type="text" th:field = "*{name}"/>
-    <input type="password" th:field = "*{password}" />
-    <p th:if="${#fields.hasErrors('error')}" th:errors="*{error}">
-				name error
-			</p>
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-    <input type="submit"/>
-    <div th:if="${param.error}" th:text="#{AbstractUserDetailsAuthenticationProvider.badCredentials}">
-    </div>
-</form>
-</body>
+	<head>
+		<meta charset="UTF-8"/>
+		<title>Insert title here</title>
+	</head>
+	<body>
+		<form  th:method="post" th:object="${user}">
+			<input type="text" th:field = "*{name}"/>
+			<input type="password" th:field = "*{password}" />
+			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+			<input type="submit"/>
+			<div th:if="${param.error}" th:text="#{AbstractUserDetailsAuthenticationProvider.badCredentials}"></div>
+		</form>
+	</body>
 </html>
