--- a/admin/src/main/resources/templates/login.html
+++ b/admin/src/main/resources/templates/login.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Insert title here</title>
+        <script type="text/javascript" src="/js/jquery-1.11.2.min.js"></script>
+        <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<form  th:method="post" th:object="${user}">
