--- a/admin/src/main/resources/templates/provider.html
+++ b/admin/src/main/resources/templates/provider.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta charset="utf-8"></meta>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"></meta>
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"></meta>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
 		<title>企业用户</title>
-        <link href="css/style.default.css" rel="stylesheet">
+        <link href="/css/style.default.css" rel="stylesheet"></link>
+        <script src="/js/jquery-1.11.2.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
     </head>
     <body>
 	<header>
@@ -27,7 +29,7 @@
 			<div class="leftpanel">
 				<ul class="nav nav-pills nav-stacked" id="child_nav" style="margin-top:10px">
 					<li class="parent">
-						<a href="">用户管理</span></a>
+						<a href="">用户管理</a>
 						<ul class="children">
 							<li class=""><a href="user.html">个人用户</a></li>
 							<li class="active"><a href="#">企业用户</a></li>
@@ -77,22 +79,22 @@
 								<th>手机号</th>
 								<th>邮箱</th>
 								<th>城市</th>
-								<th>单位</th>
+								<th>公司名称</th>
 								<th>状态</th>
 								<th>注册日期</th>
 							</tr>
 						</thead>
 						<tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>张三</td>
-                                <td>男</td>
-                                <td>1215456315</td>
-                                <td>18988056@qq.com</td>
-                                <td>上海</td>
-                                <td>上海</td>
+                            <tr th:each="provider : ${providers}">
+                                <td >1</td>
+                                <td th:text="${provider.name}">张三</td>
+                                <td th:text="${provider.sex}">男</td>
+                                <td th:text="${provider.phone}">1215456315</td>
+                                <td th:text="${provider.email}">18988056@qq.com</td>
+                                <td th:text="${provider.city.name}">上海</td>
+                                <td th:text="${provider.companyNameChina}">上海</td>
                                 <td>未审核</td>
-                                <td>2015-02-06</td>
+                                <td th:text="${provider.createTime}">2015-02-06</td>
                    			</tr>
                    		</tbody>
                     </table>
@@ -118,242 +120,7 @@
 					</div>
 				</div>
 				<div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-					<div class="modal-dialog w700" role="document">
-					    <div class="modal-content">
-					      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					      	<div class="modal-body mt20">
-					       		<form class="form-horizontal">
-					       			<div class="row">
-					       				<div class="col-sm-6">
-					       					<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>联系人姓名：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>性别：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>邮箱：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>手机号：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>职位：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>电话：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>传真：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>省/市：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<select disabled>
-						       							<option selected="selected">请选择省份/市</option>
-						       							<option>上海市</option>
-						       						</select>
-						       						<select disabled>
-						       							<option selected="selected">请选择市</option>
-						       							<option>上海市</option>
-						       						</select>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>详细地址：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>邮政编码：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-					       				</div>	
-					       				<div class="col-sm-6">
-					       					<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						公司网址：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>企业名称(中文)：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						企业名称(英文)：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						法人代表：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						注册资本：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>企业性质：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<select disabled>
-						       							<option selected="selected">请选择</option>
-						       							<option>aaaa</option>
-						       						</select>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>主营产品/服务：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>业务类型：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>行业信息：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<input class="form-control" disabled>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>企业规模：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<select disabled>
-						       							<option>1-50人</option>
-						       							<option>50-100人</option>
-						       						</select>
-						       					</div>
-						       				</div>
-						       				<div class="form-group">
-						       					<label class="control-label col-sm-4">
-						       						<span class="text-danger">*</span>年产值：
-						       					</label>
-						       					<div class="col-sm-8">
-						       						<select disabled>
-						       							<option>1-50亿</option>
-						       							<option>50-100亿</option>
-						       						</select>
-						       					</div>
-						       				</div>
-					       				</div>				       				
-					       			</div>
-					       			<div class="row">
-				       					<div class="form-group">
-					       					<label class="control-label col-sm-2">
-					       						<span class="text-danger">*</span>企业简介：
-					       					</label>
-					       					<div class="col-sm-8">
-					       						<textarea rows="4" class="w400" disabled></textarea>
-					       					</div>
-					       				</div>
-					       				<div class="form-group">
-					       					<label class="control-label col-sm-2">
-					       						<span class="text-danger">*</span>企业营业执照上传：
-					       					</label>
-					       					<div class="col-sm-8">
-					       						<img src="img/user3.png" width="400" height="100">
-					       					</div>
-					       				</div>
-					       				<div class="form-group">
-					       					<label class="control-label col-sm-2">
-					       						<span class="text-danger">*</span>税务登记证上传：
-					       					</label>
-					       					<div class="col-sm-8">
-					       						<img src="img/user5.png" width="400" height="100">
-					       					</div>
-					       				</div>
-					       				<div class="form-group">
-					       					<label class="control-label col-sm-2">
-					       						<span class="text-danger">*</span>组织结构代码证上传:
-					       					</label>
-					       					<div class="col-sm-8">
-					       						<img src="img/user2.png" width="400" height="100">
-					       					</div>
-					       				</div>
-				       				</div>
-					       		</form>
-					      </div>
-					      <div class="modal-footer">	
-					        <button type="button" class="btn btn-primary">提交</button>
-					      </div>
-					    </div>
-					</div>
+					
 				</div>
 				<!-- contentpanel -->
 			</div>
