--- a/admin/src/main/resources/templates/user/user.html
+++ b/admin/src/main/resources/templates/user/user.html
@@ -1,10 +1,35 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="contentpanel">
+    <table class="table table-bordered mb30">
+        <thead>
+            <tr>
+                <th>序号</th>
+                <th>姓名</th>
+                <th>性别</th>
+                <th>手机号</th>
+                <th>邮箱</th>
+                <th>城市</th>
+                <th>单位</th>
+                <th>部门</th>
+                <th>注册日期</th>
+                <th>积分</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="item in items">
+                <td>{{$index+1}}</td>
+                <td>{{item.name}}</td>
+                <td>{{item.gender}}</td>
+                <td>{{item.mobile}}</td>
+                <td>{{item.email}}</td>
+                <td>{{item.city}}</td>
+                <td>{{item.company}}</td>
+                <td>{{item.depart}}</td>
+                <td>{{item.createTime}}</td>
+                <td>{{item.score}}</td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="pagenumQu">
+        <pagination total-items="total" items-per-page="15" max-size="7" ng-model="page" ng-change="search()"></pagination>
+    </div>
+</div>
