fix ajaxlogin bug

--- a/admin/src/main/resources/templates/user/provider.html
+++ b/admin/src/main/resources/templates/user/provider.html
@@ -39,4 +39,6 @@
 	<div class="pagenumQu">
         <pagination total-items="total" items-per-page="15" max-size="7" ng-model="page" ng-change="search()"></pagination>
 	</div>
+	<script type="text/ng-template" id="modal.html">
+	</script>
 </div>
