--- a/web/src/main/resources/templates/instrument/view.html
+++ b/web/src/main/resources/templates/instrument/view.html
@@ -6,7 +6,7 @@
 		<meta name="_csrf_header" th:content="${_csrf.headerName}" />
 		<script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/jsRender.js}"></script>
-		<script type="text/javascript" th:src="@{/js/ajaxLogin.js}"></script>
+		<script type="text/javascript" th:src="@{/js/loginBeforeAjax.js}"></script>
 		<script>
 			$(function() {
 				var token = $("meta[name='_csrf']").attr("content");
@@ -31,7 +31,7 @@
 					div : 'reviews',
 					data : {content:$('#content').val()},
 					success : function(res) {
-						alert(res);
+						console.log(res);
 					}
 				});
 			});
